# stately

./: .gitattributes  .gitignore  .justfile  .oxlintrc.json  .tokeignore  CANONICAL_PATTERN_FILES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  EXTRACTION_STATUS.md  LICENSE  MIGRATION_EXAMPLES.md  MONOREPO_MIGRATION.md  PLUGIN_ANALYSIS_SUMMARY.md  PLUGIN_DOCUMENTATION_INDEX.md  PLUGIN_PATTERN_GUIDE.md  PLUGIN_QUICK_REFERENCE.md  PLUGIN_SYSTEM_DESIGN.md  PLUGIN_VISUAL_GUIDE.md  README.md  README_PLUGIN_DOCS.md  RELEASE_NOTES.md  SESSION_SUMMARY.md  biome.json  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  typedoc.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  pr.yml  release.yml  security.yml
crates/stately/: Cargo.toml  README.md  clippy.toml  rustfmt.toml
crates/stately-arrow/: Cargo.toml  DESIGN-PAGINATED-QUERIES.md  README.md
crates/stately-arrow/src/: api.rs  backend.rs  connectors.rs  context.rs  database.rs  error.rs  lib.rs  object_store.rs  registry.rs  request.rs  response.rs  state.rs  types.rs
crates/stately-arrow/src/api/: handlers.rs  ipc.rs  openapi.rs  response.rs
crates/stately-arrow/src/database/: clickhouse.rs
crates/stately-derive/: Cargo.toml  README.md
crates/stately-derive/src/: axum_api.rs  lib.rs
crates/stately-derive/src/axum_api/: args.rs  endpoints.rs  openapi.rs  types.rs
crates/stately-files/: Cargo.toml  README.md
crates/stately-files/src/: api.rs  entity.rs  error.rs  handlers.rs  lib.rs  openapi.rs  path.rs  request.rs  response.rs  router.rs  settings.rs  state.rs  types.rs  utils.rs
crates/stately/examples/: doc_expand.rs
crates/stately/src/: codegen.rs  demo.rs  error.rs  lib.rs
crates/stately/tests/: axum.rs  foreign.rs
demos/basic/: Cargo.toml  openapi.json
demos/pipelines/: README.md
demos/quick-start/: Cargo.toml  openapi.json
demos/quick-start/src/: main.rs
demos/quick-start/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
demos/quick-start/ui/src/: App.tsx  index.css
demos/quick-start/ui/src/lib/: stately.ts
demos/tasks/: Cargo.toml  README.md  openapi.json
docs/: DOCUMENTATION_STRUCTURE.md  README.md  _nav.json  index.md
docs/api/: _meta.json  index.md
docs/backend/: README.md  _meta.json  index.md
docs/concepts/: entities-and-state.md  links.md  overview.md  plugins.md
docs/develop/: _meta.json  extensions.md  features.md  plugins.md
docs/frontend/: README.md  _meta.json  index.md
docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/guide/: _meta.json
docs/guides/: README.md
docs/plugin-development/: README.md
docs/plugins/: README.md  _meta.json  index.md  index.mdx
examples/tasks/: Cargo.toml  openapi.json
examples/tasks/src/: api.rs  state.rs
examples/tasks/ui/: package.json  pnpm-lock.yaml
examples/tasks/ui/src/: App.tsx
examples/tasks/ui/src/lib/: stately.ts
scripts/: generate-demo.sh
stately/: Cargo.toml  README.md
stately-derive/: Cargo.toml  README.md
stately-derive/src/: axum_api.rs  entity.rs  lib.rs  state.rs  state.rs.bak  state.rs.bak2
stately-derive/src/state/: mod.rs
stately-derive/src/state/api/: axum.rs  mod.rs
stately/examples/: axum_api.rs  basic.rs  doc_expand.rs
stately/src/: collection.rs  entity.rs  error.rs  id.rs  lib.rs  link.rs  traits.rs
stately/tests/: axum.rs  core.rs
tsdocs/: hierarchy.html  index.html  modules.html
tsdocs/assets/: hierarchy.js  highlight.css  navigation.js  search.js
tsdocs/functions/: _statelyjs_arrow.plugin.arrowPlugin.html  _statelyjs_arrow.plugin.arrowUiPlugin.html  _statelyjs_files.index.createUseFilesStatelyUi.html  _statelyjs_files.index.filesPlugin.html  _statelyjs_files.index.filesUiPlugin.html  _statelyjs_schema.api.createOperationBindingsFactory.html  _statelyjs_schema.helpers.Tuple.html  _statelyjs_schema.schema.isNodeOfType.html  _statelyjs_schema.stately.createStately.html  _statelyjs_stately.core_hooks.useCreateEntity.html  _statelyjs_stately.core_hooks.useEntityData.html  _statelyjs_stately.core_hooks.useEntityDataInline.html  _statelyjs_stately.core_hooks.useEntitySchema.html  _statelyjs_stately.core_hooks.useEntityUrl.html  _statelyjs_stately.core_hooks.useListEntities.html  _statelyjs_stately.core_hooks.useObjectCompare.html  _statelyjs_stately.core_hooks.useObjectField.html  _statelyjs_stately.core_hooks.useRemoveEntity.html  _statelyjs_stately.core_hooks.useUpdateEntity.html  _statelyjs_stately.core_schema_utils.extractNodeInnerType.html  _statelyjs_stately.core_schema_utils.isArray.html  _statelyjs_stately.core_schema_utils.isEntityValid.html  _statelyjs_stately.core_schema_utils.isNullable.html  _statelyjs_stately.core_schema_utils.isObject.html  _statelyjs_stately.core_schema_utils.isPrimitive.html  _statelyjs_stately.core_schema_utils.isPrimitiveNodeLike.html  _statelyjs_stately.core_schema_utils.isSingletonId.html  _statelyjs_stately.core_utils.createCoreUtils.html  _statelyjs_stately.core_utils.generateEntityTypeDisplay.html  _statelyjs_stately.core_utils.getDefaultValue.html  _statelyjs_stately.core_utils.getNodeTypeIcon.html  _statelyjs_stately.core_utils.resolveEntityType.html  _statelyjs_stately.core_utils.resolveEntityUrl.html  _statelyjs_stately.index.statelyUi.html  _statelyjs_stately.index.useStatelyUi.html  _statelyjs_stately.schema.stately.html  _statelyjs_ui.api.createOperations.html  _statelyjs_ui.context.createStatelyUiProvider.html  _statelyjs_ui.context.createUseStatelyUi.html  _statelyjs_ui.context.useBaseStatelyUi.html  (+26 more)
tsdocs/interfaces/: _statelyjs_arrow.schema.ArrowConnectionNode.html  _statelyjs_files.schema.RelativePathNode.html  _statelyjs_schema.index.BaseConfig.html  _statelyjs_schema.index.OpenAPIV3_1.ArraySchemaObject.html  _statelyjs_schema.index.OpenAPIV3_1.NonArraySchemaObject.html  _statelyjs_schema.index.StatelyConfig.html  _statelyjs_schema.nodes.BaseNode.html  _statelyjs_schema.nodes.UnknownNode.html  _statelyjs_schema.stately.CreateStatelyOptions.html  _statelyjs_schema.stately.Stately.html  (+27 more)
(+360 files in other folders)
