[workspace]
members = [
    "crates/stately",
    "crates/stately-arrow",
    "crates/stately-derive",
    "crates/stately-files",
]
exclude = ["examples/tasks"]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["George Lee Patterson <patterson.george@gmail.com>"]
license = "Apache-2.0"
keywords = ["state", "configuration", "openapi", "api", "axum"]
categories = ["config"]
repository = "https://github.com/georgeleepatterson/stately"
homepage = "https://github.com/georgeleepatterson/stately"
documentation = "https://docs.rs/stately"

[workspace.dependencies]
axum = { version = "0.8" }
hashbrown = { version = "0.16", features = [
    "allocator-api2",
    "default",
    "inline-more",
    "serde",
] }
serde = { version = "1", features = ["derive", "std", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
utoipa = { version = "5", features = [
    "macros",
    "uuid",
    "rc_schema",
    "axum_extras",
] }
uuid = { version = "1", features = ["v7", "serde"] }
# NOTE: This must match `DataFusion`'s version to play nice with `stately-arrow`.
object_store = { version = "0.12.4", default-features = false }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "allow"

[workspace.lints.rust]
unused_imports = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[profile.ci]
inherits = "dev"
incremental = false

# ci turns off debug info, etc. for dependencies to allow for smaller binaries making caching more effective
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
