[package]
name = "stately-derive"
version = "0.1.0"
edition = "2021"
authors = ["Lumirate, Inc"]
description = "Procedural macros for stately state management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lumirate-Inc/stately"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
