[package]
name = "stately-derive"
description = "Procedural macros for stately state management"
keywords = ["configuration", "state", "api", "axum"]
categories.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[features]
# These features are used in generated code via #[cfg(feature = "...")]
# and are checked against the consuming crate's enabled features, not this proc-macro crate's.
# They must be declared here to avoid "unexpected_cfgs" warnings.
openapi = []
axum = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
