[package]
name = "stately"
description = "Type-safe state management with entity relationships and CRUD operations"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
# Build docs with all features enabled to show the complete API
all-features = true
# Alternatively, specify features explicitly:
# features = ["axum"]

[features]
default = ["openapi"]
openapi = ["dep:utoipa"]
axum = ["openapi", "dep:axum", "dep:tokio", "dep:tower-http"]

[dependencies]
hashbrown.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Optional
axum = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tower-http = { version = "0.6", features = ["compression-gzip"], optional = true }
utoipa = { workspace = true, optional = true }

stately-derive = { path = "../stately-derive", version = "0.4.1" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
clone_on_ref_ptr = "warn"
must_use_candidate = "allow"

[lints.rust]
unused_imports = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
redundant_lifetimes = "warn"
rust_2024_incompatible_pat = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[[test]]
name = "core"

[[test]]
name = "axum"
required-features = ["axum"]

[[test]]
name = "foreign"

[[example]]
name = "basic"
required-features = ["openapi"]

[[example]]
name = "axum_api"
required-features = ["axum"]

[[example]]
name = "doc_expand"
required-features = ["axum"]
