[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
stately = { path = "../../crates/stately", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "macros"] }

[[bin]]
name = "generate-openapi"
path = "src/bin/openapi.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[lints.rust]
# unused-crate-dependencies = "allow"
